# motor_xadrez

./: Cargo.toml  README.md
src/: board.rs  evaluation.rs  lib.rs  main.rs  nnue.rs  perft.rs  selfplay.rs  types.rs  zobrist.rs
src/moves/: mod.rs  pawn.rs  queen.rs  sliding.rs
