[package]
name = "motor_xadrez"
version = "1.0.0"
edition = "2021"
authors = ["Pedro Contessoto"]
description = "High-performance chess engine written in Rust"

[dependencies]
rayon = "1.8"
lazy_static = "1.4"
candle-core = "0.9"
candle-nn = "0.9"
ndarray = "0.16"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }

[profile.release]
opt-level = 3
debug = false
overflow-checks = false
lto = true
codegen-units = 1
panic = "abort"
